--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/Yan/eclipse/Jar&apos;s/mssql-jdbc-6.2.1.jre8.jar"/>
 	<classpathentry kind="lib" path="jgoodies-looks-2.5.3.jar"/>
 	<classpathentry kind="lib" path="weblaf-complete-1.29.jar"/>
 	<classpathentry kind="lib" path="liquidlnf.jar"/>
@@ -11,5 +10,7 @@
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Yan Gonçalves/git/Feps/mssql-jdbc-6.2.2.jre7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Yan Gonçalves/git/Feps/mssql-jdbc-6.2.2.jre8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
