--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="C:/Users/Yan Gonçalves/git/Feps/mssql-jdbc-6.2.2.jre7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Yan Gonçalves/git/Feps/mssql-jdbc-6.2.2.jre8.jar"/>
+	<classpathentry kind="lib" path="D:/Yan/eclipse/Jar&apos;s/mssql-jdbc-6.2.1.jre8.jar"/>
+	<classpathentry kind="lib" path="D:/Yan/eclipse/Jar&apos;s/mssql-jdbc-6.2.1.jre7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
