--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="D:/Yan/eclipse/Jar&apos;s/mssql-jdbc-6.2.1.jre8.jar"/>
 	<classpathentry kind="lib" path="D:/Yan/eclipse/Jar&apos;s/mssql-jdbc-6.2.1.jre7.jar"/>
+	<classpathentry kind="lib" path="D:/Yan/git/Feps/comm-2.0.jar"/>
+	<classpathentry kind="lib" path="D:/Yan/git/Feps/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
